[gd_scene load_steps=7 format=2]

[ext_resource path="res://MAIN/AimLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://MAIN/GunShot.wav" type="AudioStream" id=2]
[ext_resource path="res://MAIN/Gun0.gd" type="Script" id=3]
[ext_resource path="res://MAIN/sprites/guns/gun333.png" type="Texture" id=4]
[ext_resource path="res://MAIN/ReloadButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://MAIN/PlasmaBullet.tscn" type="PackedScene" id=6]

[node name="Gun0" type="Node2D"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
weapon_pos = Vector2( 50, 2 )
bullet = ExtResource( 6 )
fire_rate = 0.1
bullet_speed = 3000

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.25252, 0.292803 )
texture = ExtResource( 4 )
region_rect = Rect2( 861.43, 941.743, 101, 269 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( -27.254, -252.654 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="ReloadButton" parent="." instance=ExtResource( 5 )]

[node name="Sprite" parent="ReloadButton/Node2D" index="1"]
position = Vector2( 18.3361, -41.4499 )
scale = Vector2( 0.0847164, 0.108477 )
texture = ExtResource( 4 )

[node name="AimLine" parent="." instance=ExtResource( 1 )]
[connection signal="pressed" from="ReloadButton/Node2D/reload" to="." method="_on_reload_pressed"]

[editable path="ReloadButton"]
